--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -2,57 +2,61 @@
   <div class="col-12">
     <div class="flex justify-content-center align-content-center text-align-center">
       <!-- LOGIN -->
-      <form>
-        <p-card styleClass="mt-10" header="Login" subheader="faça login com sua conta existente!">
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmitLoginForm()">
+        <p-card styleClass="mt-10" header="Login" subheader="faça login com sua conta existente!" *ngIf="loginCard">
 
 
 
           <div class="flex justify-content-center align-content-center text-align-center">
-            <input type="email" pInputText placeholder="Email">
+            <input type="email" pInputText placeholder="Email" formControlName="email">
           </div>
 
           <div class="flex justify-content-center align-content-center text-align-center mt-3">
-            <input type="password" pInputText placeholder="Senha">
+            <input type="password" pInputText placeholder="Senha" formControlName="password">
           </div>
 
           <div class="card flex justify-content-center mt-3">
-            <button type="submit" pButton pRipple label="Login">
+            <button type="submit" pButton pRipple label="Login" [disabled]="!this.loginForm.valid">
             </button>
           </div>
 
           <span
-          class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold">
-          Criar Conta
-        </span>
+            class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
+            style="cursor: pointer;"
+            (click)="loginCard = !loginCard">
+            Criar Conta
+          </span>
         </p-card>
       </form>
- <!-- Signup -->
-      <form>
-        <p-card styleClass="mt-10" header="Criar Conta" subheader="crie já sua conta gratuita!">
+      <!-- Signup -->
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmitSignupForm()">
+        <p-card styleClass="mt-10" header="Criar Conta" subheader="crie já sua conta gratuita!" *ngIf="!loginCard">
 
 
 
           <div class="flex justify-content-center align-content-center text-align-center">
-            <input type="text" pInputText placeholder="Nome">
+            <input type="text" pInputText placeholder="Nome" formControlName="name">
           </div>
 
           <div class="flex justify-content-center align-content-center text-align-center mt-3">
-            <input type="email" pInputText placeholder="Email">
+            <input type="email" pInputText placeholder="Email" formControlName="email">
           </div>
 
           <div class="flex justify-content-center align-content-center text-align-center mt-3">
-            <input type="password" pInputText placeholder="Senha">
+            <input type="password" pInputText placeholder="Senha" formControlName="password">
           </div>
 
           <div class="card flex justify-content-center mt-3">
-            <button type="submit" pButton pRipple label="Login">
+            <button type="submit" pButton pRipple label="Criar Conta" [disabled]="!this.signupForm.valid">
             </button>
           </div>
 
           <span
-          class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold">
-          Criar Conta
-        </span>
+            class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
+            style="cursor: pointer;"
+            (click)="loginCard = !loginCard">
+            Fazer Login
+          </span>
         </p-card>
       </form>
     </div>
