--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -10,4 +10,10 @@
   .grid {
     background-position: top;
   }
+
+  @media screen and (max-width: 1000px) {
+    .grid {
+      height: 100vmax;
+    }
+  }
 }
